2003-03-04  Jon Trowbridge  <trow@ximian.com>

	* gtk/gtkmodule.c (python_do_pending_calls): Block threads while
	we make our Py* calls.  This prevents a 'no current thread' error
	if you try to kill a program by typing ctrl-c in the console it
	was launched from.

	* pygobject.c (pygobject_dealloc): Unblock threads before
	invalidating our closures, since this might trigger a destructor
	that needs to execute python code.
	(pygobject_clear): Ditto.

	* pygboxed.c (pyg_boxed_dealloc): Unblock threads before freeing
	the boxed type, since the destructor may need to execute python
	code.
	(pyg_boxed_new): Block threads while we make our Py* calls.
	(pyg_pointer_new): Block threads while we make our Py* calls.

	* gobjectmodule.c (pyg_object_set_property): We need to block
	threads before our call to pygobject_new.
	(pyg_object_get_property): Ditto.

2003-03-02  Johan Dahlin  <jdahlin@async.com.br>

	* gobjectmodule.c (pyg_io_add_watch): Fix function name in exception.

2003-02-27  Johan Dahlin  <jdahlin@async.com.br>

	* dsextras.py (getstatusoutput): Small typo.

	* setup.py: Cut the doclines, to make the windows installer happy

2003-02-26  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gdk.defs (invalidate_rect): Null is okay here. 
	Fixes #106295 (John Finlay).

	* gtk/gdk.override (_wrap_gdk_pixbuf_new_from_xpm_data):
	Impl. Fixes #106292 (John Finlay)

	* pango.override (_wrap_pango_layout_set_text): Impl. Fixes
	#106280 (John Finlay)

	* gtk/gtk.override: Added get implements for all TextAttribute
	fields. Fixes #106279 (John Finlay).

	* gtk/gtk-types.defs (TextAttributes): Added fields.

	* setup.py, dsextras.py: Added win32 support and some
	rearrangements. Largely based upon patch by Cedric Gustin.

	* gtk/gdk.defs (pointer_grab, pointer_ungrab, keyboard_grab) 
	(pointer_is_grabbed): Add.

	* gtk/gdk.defs: Add GDK_CURRENT_TIME as default value to all
	functions that require a time argument
