@@ -5842,7 +5842,7 @@
   (is-constructor-of GtkLabel)
   (return-type "GtkWidget*")
   (parameters
-    '("const-char*" "str")
+    '("const-char*" "str" (null-ok) (default "NULL"))
   )
 )
 
@@ -5851,7 +5851,7 @@
   (is-constructor-of GtkLabel)
   (return-type "GtkWidget*")
   (parameters
-    '("const-char*" "str")
+    '("const-char*" "str" (null-ok) (default "NULL"))
   )
 )
 
@@ -16283,7 +16283,7 @@
   (parameters
     '("const-gchar*" "stock_id")
     '("GtkIconSize" "size")
-    '("const-gchar*" "detail")
+    '("const-gchar*" "detail" (null-ok) (default "NULL"))
   )
 )
 
