@@ -1,3 +1,15 @@
+2003-03-07  Johan Dahlin  <jdahlin@async.com.br>
+
+	* gtk/gtk.defs (gtk_label_new_with_mnemonic, gtk_label_new) 
+	(render_icon): Allow some parameters to be NULL.
+
+	* gtk/gtk.override (_wrap_gtk_stock_lookup) 
+	(_wrap_gtk_stock_list_ids) 
+	(_wrap_gtk_tree_view_insert_column_with_data_func): Impl.
+	(ignore-glob): Remove gtk_accelerator_*
+
+	* examples/pygtk-demo/demos/stock_browser.py: Ported from C
+
 2003-03-04  Jon Trowbridge  <trow@ximian.com>
 
 	* gtk/gtkmodule.c (python_do_pending_calls): Block threads while
